--- a/pom.xml
+++ b/pom.xml
@@ -69,15 +69,14 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.13.2-R0.1-SNAPSHOT</version>
+            <version>1.16.3-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.projectkorra</groupId>
             <artifactId>projectkorra</artifactId>
-            <version>1.8.8</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/ProjectKorra-1.8.8.jar</systemPath>
+            <version>1.9.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
